--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -58,6 +58,11 @@
         	<param-name>aeskey</param-name>
         	<param-value>nh5DkevVih58uqmiDSWqnql6hamyMl7pBK6DiwLdjgR</param-value>
         </init-param>
+<!-- 企业号下某个应用，目前只用1个，如果用多个可能就不能配死了 -->
+        <init-param>
+        	<param-name>agentid</param-name>
+        	<param-value>9</param-value>
+        </init-param>
 
  
         <load-on-startup>0</load-on-startup>  
