--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -131,6 +131,17 @@
 		<servlet-name>userServlet</servlet-name>
 		<url-pattern>/userServlet</url-pattern>
 	</servlet-mapping>
+
+	<!-- 请求url日志记录拦截 -->  
+    <filter>  
+        <filter-name>requestFilter</filter-name>  
+        <filter-class>com.weixin.corp.main.RequestFilter</filter-class>  
+    </filter>  
+    <filter-mapping>  
+        <filter-name>requestFilter</filter-name>  
+        <url-pattern>/*</url-pattern>  
+    </filter-mapping>  
+	
 	
 		<!--Axis2 config start -->
 	<servlet>
