--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>WeixinTest2</display-name>
+  <display-name>WeixinTest3</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
@@ -26,9 +26,9 @@
   </servlet-mapping>
   
   <servlet>  
-        <servlet-name>timerTaskServlet</servlet-name>  
+        <servlet-name>corpWeixinServlet</servlet-name>  
         <servlet-class>  
-            com.weixin.corp.main.TimerTaskServlet
+            com.weixin.corp.main.CorpWeixinServlet
         </servlet-class>  
         <!-- 配置获取access_token所需参数appid和appsecret -->  
 
@@ -71,7 +71,33 @@
             <param-name>token</param-name>
             <param-value>weixin</param-value>
         </init-param>
+                
+<!-- 企业号下某个应用，目前只用1个，如果用多个可能就不能配死了 -->
+        <init-param>
+        	<param-name>agentid</param-name>
+        	<param-value>9</param-value>
+        </init-param>
         
+        <init-param>
+        	<param-name>httpsRequestHostUrl</param-name>
+        	<param-value>http://192.168.31.92/WeixinOuter/services/outerService?wsdl</param-value>
+        </init-param>
+        <init-param>
+        	<param-name>httpsRequestMethod</param-name>
+        	<param-value>httpsRequest</param-value>
+        </init-param>
+        <init-param>
+        	<param-name>httpsRequestQName</param-name>
+        	<param-value>http://service.corp.weixin.com</param-value>
+        </init-param>
+        <load-on-startup>0</load-on-startup>
+    </servlet>
+        
+    <servlet>  
+        <servlet-name>timerTaskServlet</servlet-name>  
+        <servlet-class>  
+            com.weixin.corp.main.TimerTaskServlet
+        </servlet-class>
         
 <!-- 数据库jdbc连接配置 -->
 		<init-param>
@@ -91,13 +117,7 @@
             <param-value>50db2eab56e7777572f34a424f2c3563</param-value>
         </init-param>
         
-<!-- 企业号下某个应用，目前只用1个，如果用多个可能就不能配死了 -->
-        <init-param>
-        	<param-name>agentid</param-name>
-        	<param-value>9</param-value>
-        </init-param>
-        
-        <load-on-startup>0</load-on-startup>  
+        <load-on-startup>1</load-on-startup>  
     </servlet>
     
      <servlet>
@@ -122,13 +142,13 @@
 
 	<!-- 请求url拦截转发 -->  
     <filter>  
-        <filter-name>requestFilter</filter-name>  
-        <filter-class>com.weixin.corp.filter.RequestFilter</filter-class>
-            <init-param>
-	        	<param-name>httpsPort</param-name>
-	        	<param-value>8443</param-value>
-        </init-param>
-    </filter>
+       <filter-name>requestFilter</filter-name>  
+       <filter-class>com.weixin.corp.filter.RequestFilter</filter-class>
+       <init-param>
+	       <param-name>httpsPort</param-name>
+	       <param-value>8443</param-value>
+       </init-param>
+	</filter>
     <filter-mapping>
         <filter-name>requestFilter</filter-name>  
         <url-pattern>/*</url-pattern>
